Revive EAP tests